# proyectoActiviaTrace

./: .gitignore  .jr-orchestrator-state.json  AGENTS.md  CHANGES.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  debug_url.py  debug_url2.py  pyproject.toml
backend/activia_trace_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/alembic/: env.py
backend/alembic/versions/: 0a1b2c3d4e5f_create_calificacion_tables.py  0a1b2c3d4e6f_create_tarea_and_comentario_tables.py  14e42736490b_initial_models.py  1a2b3c4d5e6f_add_coloquios_permissions.py  2b3c4d5e6f7a_create_evaluacion_tables.py  35d1ca4ee0c6_merge_all_heads.py  3c4d5e6f7a8b_create_aviso_tables.py  a1b2c3d4e5f6_add_rbac_tables_and_seed.py  a7b8c9d0e1f2_create_programa_materia_and_fecha_academica.py  (+11 more)
backend/app/: main.py
backend/scripts/: seed_dev.py
backend/tests/: conftest.py  test_analisis_api.py  test_analisis_calculos.py  test_analisis_repository.py  test_app_startup.py  test_asignaciones.py  test_audit.py  test_auth_router.py  test_auth_service.py  test_avisos.py  test_calificaciones.py  test_comunicaciones.py  test_config.py  test_database.py  test_dependencies.py  test_encuentros.py  test_equipos.py  test_estructura.py  test_evaluaciones.py  test_health.py  test_jwt.py  test_mensajes.py  test_mixins.py  test_models.py  test_padron.py  test_perfil.py  test_permission_service.py  test_programas_fechas.py  test_rate_limiter.py  test_rbac_integration.py  test_repositories.py  test_require_permission.py  test_security.py  test_tareas.py  test_usuarios.py
(+581 files in other folders)
