[project]
name = "activia-trace-backend"
version = "0.1.0"
description = "Backend API for activia-trace - Multi-tenant academic orchestration platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "argon2-cffi>=23.1.0",
    "python-jose[cryptography]>=3.3.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4.2",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "python-json-logger>=2.0.7",
    "aiosmtplib>=3.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.23.8",
    "httpx>=0.27.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.5",
    "mypy>=1.11.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"